[package]
name = "rtnetlink"
version = "0.1.0"
edition = "2021"

[dependencies]
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
syscalls = "0.6.15"
klickhouse = "0.12.0"
ipnet = { version = "2", features = ["serde"] }
dotenv = "0.15.0"
config = { version = "0.15.6", features = ['convert-case'] }
futures-channel = "0.3.31"
netlink-packet-core = "0.7.0"
netlink-sys = "0.8.7"
futures = "0.3.31"
clap = { version = "4.5.30", features = ["derive"] }
serde_json = "1.0.139"
