[package]
name = "rtnetlink"
version = "0.1.0"
edition = "2021"

[dependencies]
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
syscalls = "0.6.15"
klickhouse = "0.12.0"
ipnet = { version = "2", features = ["serde"] }
dotenv = "0.15.0"
config = "0.15.6"
futures-channel = "0.3.31"
netlink-packet-core = "0.7.0"
netlink-sys = "0.8.7"
futures = "0.3.31"
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
rand = "0.9.0"
hex = "0.4.3"
regex = "1.11.1"
log = "0.4.26"
log4rs = "1.3.0"
